<resources>
    <string name="app_name">Kesbewa Admin</string>
    <string name="default_notification_channel_id">1001</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Past</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_search">Search</string>
    <string name="menu_product">Products</string>
    <string name="home_second">Home Second</string>
    <string name="menu_promocode">Promo Code</string>
    <string name="menu_invoice">Invoice</string>

    <string name="viewpager_new_orders">NEW</string>
    <string name="viewpager_new_confirmed_orders">CONFIRMED</string>
    <string name="viewpager_packed_orders">PACKED</string>
    <string name="viewpager_delivery_orders">DELIVERY</string>
    <string name="viewpager_delivered_orders">DELIVERED</string>
    <string name="viewpager_store_orders">STORE</string>

    <string name="viewpager_complete_orders">COMPLETE</string>
    <string name="viewpager_reject_orders">REJECT</string>


    <string name="tst">"deliveryAddress.user_address_numberasassasssddsdsdsdsdsdsdsdsdsdsdsdsd"+ " ," +"deliveryAddress.user_address_one" + ", "+ "\n"
    + "deliveryAddress.user_address_two" + ", "+ "\n"
    + "deliveryAddress.user_address_city" + ", "+ "\n"
    + "deliveryAddress.user_address_district"</string>



    <string name="phone_number">Phone Number</string>
    <string name="your_name">Name</string>
    <string name="your_contact_number">Contact Number</string>
    <string name="ex_himanshu_fernando">Ex : Himanshu Fernando</string>
    <string name="your_email_address">Email Address</string>
    <string name="ex_0737788888">Ex :0737788888</string>
    <string name="ex_abc_gmail_com">Ex :abc@gmail.com</string>

    <string name="checkout">Check Out</string>
    <string name="street_address">Street address</string>
    <string name="street_address_2">Street address 2 (optional)</string>



    <string name="html">
<h1 style="color: #4485b8;">You can edit <span style="background-color: #4485b8; color: #ffffff; padding: 0 5px;">this demo</span> text!</h1>
<p><strong style="color: #000;">Basic usage:</strong> Paste your documents in the visual editor on the left or your HTML code in the source editor in the right. <br />Edit any of the two areas and see the other changing in real-time</p>
<p></p>
    </string>


</resources>
