<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_past"
            android:icon="@drawable/ic_nev_past"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_promocode"
            android:icon="@drawable/ic_price_tag"
            android:title="@string/menu_promocode" />

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/menu_invoice" />



    </group>
</menu>
